Re-added spacing between sections and fixed vertical spacing of roles

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -6,6 +6,7 @@
   border-top: 1px solid #364255;
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
+  margin-top: 20vh;
 
   .links {
     text-align: right;
