--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -1,5 +1,6 @@
 .education {
   text-align: center;
+  margin-top: 20vh;
 
   h1 {
     font-size: 45px;
