--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -3,6 +3,7 @@
   margin-right: 10px;
   width: 90%;
   max-width: 900px;
+  margin-top: 20vh;
 
   h1 {
     font-size: 45px;
