--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -2,6 +2,7 @@
   margin-left: 10px;
   margin-right: 10px;
   max-width: 1070px;
+  margin-top: 20vh;
 
   h2 {
     text-align: center;
